More helpful reporting.

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,9 @@ balanced_wrapping = True
 indent='		'
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 skip = setup.py
+verbose = True
+known_first_party =
+	uri
 
 [tool:pytest]
 addopts =
