--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,11 @@ branches:
 python:
   - "2.7"
   - "pypy-5.4.1"
-  - "3.3"
+  - "pypy3"
   - "3.4"
   - "3.5"
   - "3.6"
+  - "3.7"
 
 env:
   - ''
