--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,9 +1,9 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python Test Suite
-author: Alice Bevan-McGregor
-description: Install the project and test under a variety of Python versions.
+name: "Python Test Suite"
+description: "Install the project and test under a variety of Python versions."
+author: "Alice Bevan-McGregor <@amcgregor>"
 
 branding:
   icon: check-circle
