--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -2,8 +2,8 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
 name: "Python Test Suite"
-description: "Install the project and test under a variety of Python versions."
-author: "Alice Bevan-McGregor <@amcgregor>"
+  # description: "Install the project and test under a variety of Python versions."
+  # author: "Alice Bevan-McGregor <@amcgregor>"
 
 branding:
   icon: check-circle
