--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ test = [
 		'pytest-isort',  # Import ordering.
 		'pytest-mypy',  # Static type validation.
 		'pytest-black',  # Syntax linting.
+		'types-setuptools',  # Typing stubs.
 		'webob',  # Request WSGI environment mocking.
 		'requests',  # Support for the http:// and https:// protocols.
 	]
@@ -53,6 +54,7 @@ development = [  # Development-time dependencies.
 		'pytest-isort',  # Import ordering.
 		'pytest-mypy',  # Static type validation.
 		'pytest-black',  # Syntax linting.
+		'types-setuptools',  # Typing stubs.
 		'webob',  # Request WSGI environment mocking.
 		'requests',  # Support for the http:// and https:// protocols.
 		'pre-commit',  # Commit hooks for code quality.
@@ -132,8 +134,13 @@ line_length = 120
 
 
 [tool.mypy]
-#follow_imports = silent
-#strict_optional = True
-#warn_no_return = False
-#check_untyped_defs = True
+follow_imports = "silent"
+strict_optional = true
+warn_no_return = false
+#check_untyped_defs = true
+#ignore_missing_imports = true
+
+# required to support namespace packages
+# https://github.com/python/mypy/issues/14057
+explicit_package_bases = true
 
